# adventofcode

./: .editorconfig  .gitignore  README.md  create_day.py  pyproject.toml  run_day.py  utils.py
2018/: day1.scala  day2.scala  inputday2.txt
2019/: day1.py  day1_2.py  day2.py  day3.py  day4.py  day4_2.py  day5.py
2020/: 1.py  10.py  10p2.py  11.py  11p2.py  12.py  12p2.py  1part2.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  9p2.py
2021/: 01.py  01p2.py  02.py  07.py  08.py  10.py  11.py  12.py  3.py  3p2.py  4.py  4p2.py  5.py  5p2.py  6.py  6p2.py  9.py
2022/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  16.py  17.py  18.py  19.py  20.py  21.py  temp.py
2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py
2024/samples/: 03.in
2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py
templates/: py  template.py
utils/: dirs.py  grid_dirs.py  parsing.py
