[project]
name = "adventofcode"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "z3-solver>=4.15.4.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true
